# flowforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: skills.md
shared/types/: package.json
shared/types/src/: index.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: CommentWidget.tsx  CommentWidgets.tsx  ContextHints.tsx  ContextMenu.tsx  DebugWidget.tsx  DesktopToolbar.tsx  ErrorBoundary.tsx  FlowCanvas.tsx  HistoryPanel.tsx  Icons.tsx  LanguageSwitcher.tsx  MobileToolbar.tsx  NodePalette.tsx  NodeWidgets.tsx  OnboardingTutorial.tsx  PropertyPanel.tsx  SearchDialog.tsx  SelectionBar.tsx  ShortcutsHelp.tsx  SubflowPanel.tsx  TemplateBrowser.tsx  ThemeToggle.tsx  ZoomControls.tsx
src/components/ai/: APIKeyManager.tsx  ImageGenerateWidget.tsx  LLMChatWidget.tsx  PromptTemplateWidget.tsx  index.ts
src/components/packs/: PackBrowser.tsx  PublishNodeDialog.tsx  index.ts
src/constants/: zIndex.ts
src/hooks/: index.ts  useCanvasKeyboard.ts  useClickOutside.ts  useDropdown.ts  useIsMobile.ts  useIsTouchDevice.ts  useTheme.ts
src/i18n/: index.ts  translations.ts
src/test/: CanvasContractTest.tsx
src/theme/: index.ts  shadows.ts
src/utils/: canvasLayout.ts  canvasMenuItems.ts
