[package]
name = "flowforge"
version = "0.1.0"
description = "FlowForge - AI-Native Node Editor"
authors = ["FlowForge Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-remove-file", "fs-read-dir", "fs-write-file", "fs-rename-file", "fs-remove-dir", "fs-create-dir", "fs-exists", "fs-read-file", "dialog-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
